--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-vue": "~10.0.0",
     "jiti": "^2.4.2",
     "jsdom": "^26.0.0",
+    "nodemon": "^3.1.9",
     "npm-run-all2": "^7.0.2",
     "oxlint": "^0.15.13",
     "prettier": "3.5.3",
