--- a/da-nang-di-mo-fe/package.json
+++ b/da-nang-di-mo-fe/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.2",
+    "@mui/material": "^7.1.2",
     "antd": "^5.25.3",
     "axios": "^1.9.0",
     "nest-crud-client": "^5.0.0",
