--- a/da-nang-di-mo-fe/package.json
+++ b/da-nang-di-mo-fe/package.json
@@ -13,12 +13,14 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.2",
     "@mui/material": "^7.1.2",
+    "@reduxjs/toolkit": "^2.8.2",
     "antd": "^5.25.3",
     "axios": "^1.9.0",
     "nest-crud-client": "^5.0.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.1",
     "sass": "^1.89.1",
     "yarn": "^1.22.22"
@@ -29,9 +31,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitejs/plugin-react": "^4.6.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vite": "^7.0.3"
   }
 }
